# people-db

./: README.md  main.py  people.db  pyproject.toml
templates/: form.html  index.html  layout.html
